--- a/style.css
+++ b/style.css
@@ -201,12 +201,7 @@ span {
 }
 
 .button:hover {
-    -webkit-text-stroke: 1px;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-color: springgreen;
-    background-color: transparent;
-    border: 1px solid springgreen;
-    box-shadow: 1px 2px 4px springgreen;
+    box-shadow: 1px 2px 4px rgb(252, 252, 252);
 
 }
 
@@ -322,13 +317,16 @@ span {
     position: relative;
 }
 
+
 #language1 {
     width: 100%;
     height: 100%;
     position: absolute;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+    gap:35px;
 }
 
 #language2 {
@@ -336,8 +334,10 @@ span {
     height: 100%;
     position: absolute;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+    gap:30px;
     display: none;
 }
 
@@ -346,48 +346,28 @@ span {
     height: 100%;
     position: absolute;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     display: none;
+    gap:30px;
 }
 
 .l {
-    width: 100%;
-    height: 10vh;
-    margin-top: 3vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* background-color: rgb(185, 203, 83); */
+    width :160px;
+    height: 140px;
+    border-radius: 15px;
+    padding: 3px;
+    overflow: hidden;
+    filter:drop-shadow(-1px 5px 15px springgreen);
+    background-color: rgb(255, 255, 255);
+   }
+.l>img{
+    width :100%;
+    height: 100%;
+    object-fit: contain;
 }
 
-.l h3 {
-    margin-left: 1.8vw;
-    font-size: 2.8vh;
-}
-
-.percentage {
-    padding: 0 3vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 2vh;
-}
-
-progress {
-    width: 89%;
-    height: 3px;
-    background-color: springgreen;
-}
-
-progress::-webkit-progress-value {
-    background: springgreen;
-}
-
-.percentage p {
-    font-size: 1.5vw;
-}
 
 /* projects */
 
@@ -470,7 +450,7 @@ progress::-webkit-progress-value {
 
 .project video {
     width: 100%;
-    height: 100%;
+    height: 110%;margin-top: -8%;
     object-fit: cover;
     object-position: center;
     background-color: #000;
@@ -571,16 +551,14 @@ progress::-webkit-progress-value {
 }
 
 .project h3 {
+    margin-top: 4px;
     font-size: 2vw;
 }
 
 .project a {
     text-decoration: none;
-    font-size: 1.4vw;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    color: springgreen;
+    /* gap: 5px; */
+    color: white;
 }
 
 /* ============ page 4============ */
@@ -864,17 +842,15 @@ footer a:hover {
         width: 40%;
     }
 
-    .l h3 {
-        font-size: 2.2vh;
-    }
-
-    progress {
-        width: 82%;
-    }
-
-    .percentage p {
-        font-size: 2vw;
-    }
+    .l {
+        width :120px;
+        height: 100px;
+        border-radius: 15px;
+        padding: 3px;
+        overflow: hidden;
+        filter:drop-shadow(-1px 4px 12px springgreen);
+        background-color: rgb(255, 255, 255);
+       }
 
     /* =========p3======================= */
 
@@ -1114,18 +1090,23 @@ footer a:hover {
     }
 
     .languages {
-        width: 90%;
-        height: 60%;
+        width: 100%;
+        height: 70%;
+        overflow: hidden;
+        
     }
 
     .l {
         margin-top: 2.5vh;
+        width :100px;
+    height: 80px;
+    border-radius: 15px;
+    padding: 3px;
+    overflow: hidden;
+    filter:drop-shadow(-1px 5px 15px springgreen);
+    background-color: rgb(255, 255, 255);
     }
 
-    .percentage p {
-        font-size: 3.8vw;
-        margin-left: 1px;
-    }
 
 
     /* =========p3======================= */
